--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -324,6 +324,13 @@ img {
 .work__img img:hover {
   transform: scale(1.1);
 }
+.work__text {
+  margin-top: 8px; /* Space between the image and the text */
+  color: red; /* Keep the text color */
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
 
 /* ===== CONTACT =====*/
 .contact__input {
